"Added version number to 'about' page", "Fixed light/dark mode suppot to the table on the 'about' page", "Fixed style template conflicts", "Rebranded as 'Firewall Management'", "Added a changelog to the 'about' page"

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -103,6 +103,28 @@
     border: 0.5px solid var(--light-on-surface);
 }
 
+/* Light mode table styles */
+.light-mode .theme-table {
+    background-color: var(--light-surface);
+    color: var(--light-on-surface);
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.light-mode .theme-table th,
+.light-mode .theme-table td {
+    border: 1px solid var(--light-on-surface);
+    padding: 8px;
+}
+
+.light-mode .theme-table tr:nth-child(even) {
+    background-color: var(--light-background);
+}
+
+.light-mode .theme-table tr:hover {
+    background-color: var(--light-primary);
+    color: var(--light-on-primary);
+}
 
 
 /* Dark mode styles */
@@ -140,6 +162,7 @@
 .dark-mode .w3-card {
     border: 0.5px solid var(--dark-on-surface);
     background-color: var(--dark-surface);
+    border: 0px;
 }
 .dark-mode .nav-bar,
 .dark-mode .nav-bar a {
@@ -172,4 +195,27 @@
     background-color: var(--dark-surface);
     color: var(--dark-on-surface);
     border: 0.5px solid var(--dark-on-surface);
+}
+
+/* Dark mode table styles */
+.dark-mode .theme-table {
+    background-color: var(--dark-surface);
+    color: var(--dark-on-surface);
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.dark-mode .theme-table th,
+.dark-mode .theme-table td {
+    border: 1px solid var(--dark-on-surface);
+    padding: 8px;
+}
+
+.dark-mode .theme-table tr:nth-child(even) {
+    background-color: var(--dark-background);
+}
+
+.dark-mode .theme-table tr:hover {
+    background-color: var(--dark-primary);
+    color: var(--dark-on-primary);
 }
